# ExtModule-003

./: ReadMe.md
FW/: ReadMe.md
FW/001-base/: ReadMe.md  app_main.c  app_main.h  drv_led.c  drv_led.h  drv_product.c  drv_psram.c  drv_psram.h  drv_softspi_xl2400p.c  drv_softspi_xl2400p.h  drv_uart.c  drv_uart.h  drv_watchdog.c  hbox_port.c  hbox_port.h  main.c  main.h  product_config.c  product_config.h  py32f0xx_hal_conf.h  py32f0xx_hal_msp.c  py32f0xx_it.c  service_shell.c  service_shell.h  service_wireless.c  service_wireless.h  system_py32f0xx.c
FW/001-base/GCC/: CMakeLists.txt  py32f030x8.ld
FW/001-base/MDK-ARM/: base.uvprojx  startup_py32f030xx.s  syscalls.c
HW/: ProPrj_ExtModule-003_2025-06-06.epro  ReadMe.md
